src/app/pharos-dashboard/data-types-panel/data-types-panel.component.scss
@import '../../../ncats-theme';

.types-grid-list {
  padding-top:10vh;
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(19%, .5fr));
  grid-gap: .5em;
  grid-row-gap: 5em;
  margin-top: 5vh;
  margin-bottom: 5vh;
}

.data-type.centered {
  width: 100%;
}


.type-card {
  max-width: 60%;
  border: 4px solid mat-color($pharos-app-primary);
  color: mat-color($pharos-app-primary);
  border-radius: 10px;
  font: 300 3em Roboto, "Helvetica Neue", sans-serif;
  margin: 0 auto;
}

.type-card:hover {
  cursor: pointer;
  box-shadow: 8px 8px 1px -3px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
  border: 4px solid mat-color($pharos-app-accent);
}

.type-card > div {
  justify-content: center;
}

.type-icon {
  padding: 1vh 0 1vh 0;
}

.type-count {
  font: 300 .8em Roboto, "Helvetica Neue", sans-serif;
}

.benzene {
  max-height: 150px;
  max-width: 168px;
}

@media only screen and (max-width: 960px) {
  .types-grid-list {
    grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
  }

  .publications {
  font-size: .8em;
  }

}

@media  screen and (max-width: 768px) {
  .types-grid-list {
    grid-template-columns: repeat(auto-fit, minmax(48%, 1fr));
    grid-row-gap: 1em;
    padding-top: 0;
  }

  .type-card {
    font-size: 2em;
  }

  .type-icon {
    max-height: 75px;
    max-width: 84px;
  }
}

